# SemanticSQL

./: README.md
semanticsql/semanticsql/: Makefile  README.md  docker-compose.yml
semanticsql/semanticsql/backend/: pyproject.toml
semanticsql/semanticsql/backend/app/: config.py  main.py  orchestrator.py
semanticsql/semanticsql/backend/app/api/: feedback.py  health.py  query.py  schema.py  validate.py
semanticsql/semanticsql/backend/app/db/: connections.py  introspect.py
semanticsql/semanticsql/backend/app/llm/: client.py  prompts.py  stream.py
semanticsql/semanticsql/backend/app/rag/: embeddings.py  indexer.py  retriever.py  types.py
semanticsql/semanticsql/backend/app/validation/: dryrun.py  identifiers.py  parser.py  policy.py
semanticsql/semanticsql/backend/scripts/: index_schemas.py  inspect_retrieval.py  warmup_ollama.py
semanticsql/semanticsql/backend/tests/: conftest.py  test_identifiers.py  test_orchestrator.py  test_parser.py  test_policy.py  test_prompts.py  test_retriever.py
semanticsql/semanticsql/databases/chinook/: 02-readonly-user.sql
semanticsql/semanticsql/databases/metadata/: chinook.yaml  pagila.yaml
semanticsql/semanticsql/databases/pagila/: 03-readonly-user.sql
semanticsql/semanticsql/eval/: conditions.py  metrics.py  pyproject.toml  queries.yaml  run_eval.py
semanticsql/semanticsql/frontend/: index.html  package.json  tailwind.config.js  vite.config.ts
semanticsql/semanticsql/frontend/src/: App.tsx
semanticsql/semanticsql/frontend/src/components/: DatabaseSelector.tsx  QueryInput.tsx  ResultsTable.tsx  SQLPreview.tsx  (+3 more)
(+4 files in other folders)
