[project]
name = "semanticsql-backend"
version = "0.1.0"
description = "Natural-language-to-SQL with RAG, validation, and self-correction"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "openai>=1.50",                    # async client, pointed at Ollama
    "sentence-transformers>=3.2",
    "chromadb>=0.5.20",
    "sqlglot>=25.30",
    "asyncpg>=0.30",
    "aiomysql>=0.2.0",
    "PyMySQL>=1.1.1",                  # aiomysql import dependency
    "PyYAML>=6.0",
    "httpx>=0.27",
    "structlog>=24.4",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
    "mypy>=1.13",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
