[project]
name = "semanticsql-eval"
version = "0.1.0"
description = "Eval harness for SemanticSQL"
requires-python = ">=3.11"
dependencies = [
    "diskcache>=5.6",
    "pandas>=2.2",
    "tabulate>=0.9",
    "rich>=13.9",
    "PyYAML>=6.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = []
